--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -7,3 +9,37 @@ html, body{
   width: 100%;
   height: 100%;
 }
+
+h1{
+  font-size: 35px;
+  font-family: 'Nunito', sans-serif;
+}
+
+h2{
+  font-size: 33px;
+  font-family: 'Nunito', sans-serif;
+}
+
+h3{
+  font-size: 28px;
+  font-family: 'Nunito', sans-serif;
+}
+
+h4{
+  font-size: 28px;
+  font-family: 'Nunito', sans-serif;
+}
+
+h5{
+  font-size: 20px;
+  font-family: 'Nunito', sans-serif;
+}
+
+h6{
+  font-size: 15px;
+  font-family: 'Nunito', sans-serif;
+}
+
+/* h2{
+  d
+} */
