--- a/client/app/login/login.css
+++ b/client/app/login/login.css
@@ -3,10 +3,12 @@
   height: 100%;
   position: relative;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
 .form-container {
+  border-radius: 10px;
   position: relative;
   color: white;
   box-sizing: border-box;
@@ -15,8 +17,10 @@
   flex-direction: column;
   z-index: 1;
   gap: 20px;
-  padding: 80px 60px;
-  background-color: black;
+  padding: 60px;
+  width: max-content;
+  box-shadow: 0px 0px 15px rgb(0, 0, 0);
+  background-color: rgb(27, 22, 22);
 }
 
 form {
@@ -24,26 +28,36 @@ form {
   flex-direction: column;
   width: max-content;
   gap: 20px;
-  padding: 0 20px;
 }
 
-form div{
+form div {
   display: flex;
   flex-direction: column;
   gap: 5px;
 }
 
-input{
+input {
+  width: 200px;
+  padding: 15px 10px;
+  font-size: 15px;
+  border: 0;
+}
+
+button {
+  background-color: white;
   padding: 10px;
   border: 0;
 }
 
-button{
-  padding: 10px;
+button:hover{
+  cursor: pointer;
 }
 
-.background{
+.background {
+  opacity: 0.8;
   position: absolute;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   z-index: 0;
@@ -51,4 +65,10 @@ button{
   justify-content: start;
   text-align: center;
   flex-wrap: wrap;
+}
+
+.image-container {
+  position: relative;
+  width: calc(100% / 5);
+  height: calc(100% / 5);
 }
