--- a/client/app/login/loginAndRegister.css
+++ b/client/app/login/loginAndRegister.css
@@ -8,6 +8,16 @@
   overflow: hidden;
 }
 
+#register {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
 .form-container {
   border-radius: 10px;
   position: relative;
@@ -50,49 +60,29 @@ button {
   border: 0;
 }
 
-button:hover{
+button:hover {
   cursor: pointer;
 }
 
-.background {
-  opacity: 0.8;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: 0;
-  display: flex;
-  justify-content: start;
-  text-align: center;
-  flex-wrap: wrap;
-}
-
-.image-container {
-  position: relative;
-  width: calc(100% / 5);
-  height: calc(100% / 4);
-}
-
 @media only screen and (max-width: 600px) {
-  .form-container{
+  .form-container {
     padding: 45px;
   }
 }
 
 @media only screen and (max-width: 400px) {
-  .form-container{
+  .form-container {
     justify-content: center;
     align-items: center;
     padding: 25px;
   }
 
-  input{
+  input {
     padding: 10px;
     font-size: 14px;
   }
 
-  button{
+  button {
     width: 100px;
     padding: 5px;
     margin: auto;
