--- a/client/app/components/itemBox/itemBox.css
+++ b/client/app/components/itemBox/itemBox.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   border: 2px solid black;
-  width: 200px;
+  width: 220px;
   height: max-content;
 }
 
@@ -18,7 +18,9 @@
   z-index: 2;
   top: 0;
   right: 0;
-  border: 2px solid black;
+  border-color: rgb(0, 0, 0);
+  border-style: solid;
+  border-width: 0px 0px 2px 2px;
   overflow: hidden;
   border-radius: 0 0 0 20px;
   width: 60px;
@@ -31,10 +33,46 @@
 }
 
 .item-title{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
   padding: 8px 0;
   background-color: rgb(102, 102, 102);
   color: white;
   text-align: center;
   width: 100%;
   height: max-content;
+}
+
+.item-add{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.item-add div{
+  display: flex;
+  gap: 10px;
+}
+
+.add{
+  background-color: transparent;
+  border: 0;
+  width: max-content;
+  height: max-content;
+  font-size: 20px;
+  color: white;
+}
+
+input{
+  width: 25px;
+  font-size: 17px;
+  border: 0;
+  background-color: transparent;
+  color: white;
+  text-align: center;
+  display: flex;
 }
