--- a/client/app/home.css
+++ b/client/app/home.css
@@ -1,7 +1,7 @@
 #home{
   width: 100%;
   height: 100%;
-  padding: 30px;
+  padding: 0 30px;
   box-sizing: border-box;
 }
 
@@ -11,7 +11,7 @@
   height: max-content;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   flex-direction: row;
   gap: 20px;
 }
