--- a/client/app/components/TopBar/TopBar.css
+++ b/client/app/components/TopBar/TopBar.css
@@ -4,7 +4,7 @@ nav {
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
-  padding: 20px 0;
+  padding: 20px 30px;
 }
 
 nav div {
