--- a/client/app/components/TopBar/TopBar.css
+++ b/client/app/components/TopBar/TopBar.css
@@ -1,6 +1,7 @@
 nav {
   position: relative;
   width: 100%;
+  height: 70px;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
@@ -17,4 +18,17 @@ nav div {
 nav div a {
   color: black;
   text-decoration: none;
+}
+
+.links .profile-picture{
+  width: 50px;
+  height: 50px;
+  border-radius: 100px;
+  overflow: hidden;
+}
+
+img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
