--- a/client/app/components/TopBar/TopBar.css
+++ b/client/app/components/TopBar/TopBar.css
@@ -8,7 +8,7 @@ nav {
   padding: 20px 30px;
 }
 
-nav div {
+nav .nav-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,13 +20,45 @@ nav div a {
   text-decoration: none;
 }
 
-.links .profile-picture{
+.menu{
   position: relative;
-  width: 40px;
-  height: 40px;
-  border: 0;
-  border-radius: 100px;
+  width: 100%;
+  height: 200%;
+  padding: 5px;
+  z-index: 4;
+}
+
+.menu .user-picture {
+  width: 100%;
+  height: 100%;
   overflow: hidden;
+  border: 0;
+  border-radius: 10px 10px 0 0;
+}
+
+.menu:hover .dropdown{
+  height: 70px;
+}
+
+.dropdown {
+  transition: all 0.2s ease-in-out;
+  height: 0;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  text-align: center;
+}
+
+.dropdown .item{
+  width: 100%;
+  height: 35px;
+  background-color: whitesmoke;
+  border: 0;
+  border-bottom: 1px solid black;
+  padding: 5px 0;
 }
 
 img{
