--- a/client/app/components/itemBox/itemBox.css
+++ b/client/app/components/itemBox/itemBox.css
@@ -1,78 +1,55 @@
-.item-box {
+.item-container {
   position: relative;
   display: flex;
   flex-direction: column;
-  border: 2px solid black;
-  width: 200px;
+  width: 230px;
   height: max-content;
 }
 
-.item-picture {
-  position: relative;
+.image-container{
   width: 100%;
-  height: 120px;
+  height: 170px;
 }
 
-.profile-picture {
-  position: absolute;
-  z-index: 2;
-  top: 0;
-  right: 0;
-  border-color: rgb(0, 0, 0);
-  border-style: solid;
-  border-width: 0px 0px 2px 2px;
-  overflow: hidden;
-  border-radius: 0 0 0 20px;
-  width: 60px;
-  height: 60px;
-}
-
-.picture {
-  position: relative;
+.image-container img{
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
-.item-title {
+.items-container{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 10px;
-  padding: 8px 0;
-  background-color: rgb(42, 41, 41);
-  color: white;
-  text-align: center;
-  width: 100%;
-  height: max-content;
 }
 
-.item-add {
+.text-container{
+  width: 100%;
+  box-sizing: border-box;
+  text-align: start;
+  padding: 10px;
+}
+
+.price-container{
   width: 100%;
   display: flex;
-  justify-content: space-around;
   align-items: center;
+  justify-content: space-between;
+  background-color: rgb(51, 50, 50);
+  color: white;
+  padding: 5px 20px;
+  box-sizing: border-box;
 }
 
-.item-add div {
-  display: flex;
-  gap: 10px;
-}
-
-.add {
+.price-container button{
+  color: white;
   background-color: transparent;
   border: 0;
-  width: max-content;
-  height: max-content;
-  font-size: 15px;
-  color: white;
+  font-size: 20px;
 }
 
-input {
-  width: 25px;
-  font-size: 17px;
-  border: 0;
-  background-color: transparent;
-  color: white;
-  text-align: center;
+.button-container{
   display: flex;
+  gap: 16px;
 }
