--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -5,51 +5,64 @@
   padding: 0;
 }
 
-html, body{
+html,
+body {
   width: 100%;
   height: 100%;
 }
 
-h1{
+h1 {
   font-size: 35px;
   font-family: 'Nunito', sans-serif;
 }
 
-h2{
-  font-size: 33px;
+h2 {
+  font-size: 25px;
   font-family: 'Nunito', sans-serif;
 }
 
-h3{
-  font-size: 28px;
+h3 {
+  font-size: 23px;
+  font-weight: 900;
   font-family: 'Nunito', sans-serif;
 }
 
-h4{
+h4 {
   font-size: 17px;
   font-family: 'Nunito', sans-serif;
 }
 
-h5{
+h5 {
   font-size: 20px;
   font-family: 'Nunito', sans-serif;
 }
 
-h6{
+h6 {
   font-size: 15px;
   font-family: 'Nunito', sans-serif;
 }
 
-.pointer:hover{
+p{
+  font-size: 17px;
+  font-family: 'Nunito', sans-serif;
+}
+
+.pointer:hover {
   cursor: pointer;
 }
 
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 @media only screen and (max-width: 400px) {
-  h2{
+  h2 {
     font-size: 25px;
   }
 
-  h5{
+  h5 {
     font-size: 18px;
   }
 
