--- a/client/app/user/[user_id]/user.module.css
+++ b/client/app/user/[user_id]/user.module.css
@@ -5,16 +5,24 @@
   display: grid;
   box-sizing: border-box;
   grid-template-areas:
-  'seller seller . . .'
-  'name name . . .'
-  '. products-sold products-sold products-sold .'
+  'seller seller seller seller seller'
+  'products-sold products-sold products-sold products-sold .'
   'products products products products products';
   grid-template-columns: repeat(5, 1fr);
   grid-template-rows: max-content;
 }
 
-.seller-picture{
+.seller_info{
   grid-area: seller;
+  width: max-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.seller_picture{
   width: 165px;
   height: 165px;
   border-radius: 2000px;
@@ -22,26 +30,23 @@
 }
 
 .name{
-  margin: 10px 0;
-  display: flex;
-  width: 165px;
-  grid-area: name;
-  justify-content: center;
+  width: max-content;
 }
 
-.products-sold{
-  text-align: center;
+.products_sold{
+  margin-top: 20px;
+  text-align: start;
   margin-bottom: 10px;
   grid-area: products-sold;
 }
 
-.seller-picture img{
+.seller_picture img{
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.products-container{
+.products_container{
   width: 100%;
   display: flex;
   flex-wrap: wrap;
