--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -33,7 +33,7 @@ h4 {
 }
 
 h5 {
-  font-size: 20px;
+  font-size: 17px;
   font-family: 'Nunito', sans-serif;
 }
 
@@ -55,6 +55,16 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+textarea{
+  font-family: 'Nunito', sans-serif;
+  font-size: 15px;
+}
+
+input{
+  font-family: 'Nunito', sans-serif;
+  font-size: 15px;
 }
 
 @media only screen and (max-width: 400px) {
