--- a/client/app/components/createItem/createItem.module.css
+++ b/client/app/components/createItem/createItem.module.css
@@ -5,6 +5,8 @@
   min-height: 100%;
   left: 0;
   top: 0;
+  display: flex;
+  align-items: center;
   background-color: rgba(0, 0, 0, 0.423);
   z-index: 1;
 }
