--- a/client/app/components/itemUserBox/itemBoxUser.module.css
+++ b/client/app/components/itemUserBox/itemBoxUser.module.css
@@ -62,6 +62,10 @@
   width: 100%;
   border: 0;
   font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
 }
 
 .edit{
