--- a/client/app/my-profile/profile.module.css
+++ b/client/app/my-profile/profile.module.css
@@ -16,9 +16,9 @@
 }
 
 .seller_picture {
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
+  width: 150px;
+  height: 100px;
+  border-radius: 5px;
   overflow: hidden;
 }
 
@@ -36,16 +36,17 @@
 }
 
 .create_item {
-  position: sticky;
   position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 120px;
   box-sizing: border-box;
+  display: flex;
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   height: max-content;
   padding: 10px;
-  background-color: black;
+  background-color: rgb(168, 125, 125);
+  background: linear-gradient(to bottom right, lightcoral, rgb(251, 181, 181));
   color: white;
   border-radius: 10px;
 }
