--- a/client/app/my-wishlist/wishlist.module.css
+++ b/client/app/my-wishlist/wishlist.module.css
@@ -1,9 +1,19 @@
 #wishlist{
   width: 100%;
   height: max-content;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   gap: 20px;
   padding: 0 30px;
   box-sizing: border-box;
+}
+
+.item_container{
+  width: 100%;
+  height: max-content;
+  display: flex;
+  gap: 20px;
+  box-sizing: border-box;
+  flex-wrap: wrap;
 }
