--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -12,6 +12,10 @@ body {
   height: 100%;
 }
 
+.custom-section {
+  height: calc(100% - 70px) !important;
+}
+
 h1 {
   font-size: 35px;
   font-family: 'Nunito', sans-serif;
