--- a/client/app/components/itemBox/itemBox.module.css
+++ b/client/app/components/itemBox/itemBox.module.css
@@ -3,15 +3,22 @@
   display: flex;
   flex-direction: column;
   width: 200px;
-  height: 230px;
+  height: 220px;
+  padding: 3px;
   box-shadow: 0 0 10px #919191;
+  border-radius: 3px;
   overflow: hidden;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.item_container:hover{
+  box-shadow: 0 0 5px black;
 }
 
 .image_container{
   width: 100%;
   height: 70%;
-  border-radius: 3px;
 }
 
 .image_container img{
@@ -22,15 +29,14 @@
 
 .items_container{
   height: 30%;
-  padding: 10px;
-  gap: 2px;
+  padding: 3px 6px;
+  gap: 6px;
   box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
+  display: grid;
 }
 
 .text_container{
+  justify-self: flex-start;
   width: 100%;
 }
 
@@ -54,6 +60,8 @@
 .price_container {
   box-sizing: border-box;
   display: flex;
+  align-self: flex-end;
+  justify-self: flex-end;
   align-items: start;
   justify-content: space-between;
   width: 100%;
@@ -63,4 +71,28 @@
 .hr{
   align-self: center;
   height: 20px;
+}
+
+@keyframes heartAnimation {
+
+  0%, 100% {
+    scale: 1;
+    rotate: 0deg;
+  }
+
+  50% {
+    color: red;
+    fill: red;
+    scale: 1.1;
+    rotate: 20deg;
+  }
+}
+
+.heart{
+  /* animation: heartAnimation 5s ease-in-out 0ms forwards; */
+}
+
+.heart:hover{
+  /* color: red; */
+  animation: heartAnimation 0.8s ease-in-out 0ms forwards infinite;
 }
